# nano-clip

./: .gitignore  mieb.py  pyproject.toml
scripts/: train.sh
src/open_clip/: factory.py  loss.py
src/open_clip_train/: data.py  main.py  params.py  train.py
