[project]
name = "open-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# NOTE for full list of authors see https://github.com/mlfoundations/open_clip?tab=readme-ov-file#citing
# below covers most active / recent maintainers
authors = [
    { name = "Ross Wightman", email = "ross@huggingface.co" },
    { name = "Gabriel Ilharco" },
    { name = "Mitchell Wortsman" },
    { name = "Romain Beaumont" },
    { name = "Pume Tuchinda", email = "pumetuchinda@gmail.com" }
]
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    'torch>=2.0',
    'torchvision',
    'regex',
    'ftfy',
    'tqdm',
    'huggingface-hub',
    'safetensors',
    'timm>=1.0.17',
    "wandb>=0.25.0",
    'webdataset>=0.2.5,<=0.2.86',
    'pandas',
    'transformers[sentencepiece]',
    'timm>=1.0.17',
    'fsspec',
    "mteb @ git+https://github.com/pumetu/mteb.git",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
